src/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>EligibleForSAOCredit__c</fullName>
        <businessOwnerGroup>Sales_Operations</businessOwnerGroup>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the Product qualifies for SAO credit. Only subscription products that can be sold on a stand-alone basis for new projects qualify. New projects are defined as either new customers or cross-sell opportunities with existing customers. JIRA: SFDCSPT-661</description>
        <inlineHelpText>Indicates whether the Product qualifies for SAO credit. Only subscription products that can be sold on a stand-alone basis for new projects qualify. New projects are defined as either new customers or cross-sell opportunities with existing customers.</inlineHelpText>
        <label>Eligible for SAO Credit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Group_Traction__c</fullName>
        <description>This field is part of of Traction tool implementation. Not to be confused with the standard &quot;Product Code&quot; field. Designed to group products into distinct categories to display category icons in the Traction Account hierarchy views on the Account records. JIRA: SFDCSPT-96</description>
        <inlineHelpText>This field is part of of Traction tool implementation. Not to be confused with the standard &quot;Product Code&quot; field. Designed to group Products into distinct categories to display category icons in the Traction Account hierarchy views on the Account records.</inlineHelpText>
        <label>Product Group (Traction)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Partnership</fullName>
                </value>
                <value>
                    <fullName>POC/Perpetual</fullName>
                </value>
                <value>
                    <fullName>Professional Services</fullName>
                </value>
                <value>
                    <fullName>Subscription</fullName>
                </value>
                <value>
                    <fullName>Support</fullName>
                </value>
                <value>
                    <fullName>POC</fullName>
                    <isActive>false</isActive>
                    <label>POC</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Id__c</fullName>
        <description>https://help.salesforce.com/articleView?id=000330735&amp;type=1&amp;mode=1</description>
        <formula>CASESAFEID(Id)</formula>
        <label>Product Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Professional_Services__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Professional Services</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Requires_Onboarding__c</fullName>
        <businessOwnerGroup>System_Admins</businessOwnerGroup>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the Product requires that Customer Success onboard the customer. JIRA: SFDCSPT-449</description>
        <inlineHelpText>Indicates whether the Product requires that Customer Success onboard the customer.</inlineHelpText>
        <label>Requires Onboarding</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Subscription_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This API Name is probably used elsewhere as description text,  so careful if refactoring its api name!</description>
        <label>Subscription Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>external_id_for_n4jSFDC_sandbox_use_only__c</fullName>
        <description>Visible to admins only. Populated only on a named/small set of records in sandboxes to help relationally-reconstruct specific data in partial copy environments (This fields helps admins combat the random sampling nature of partial copy environments)</description>
        <externalId>true</externalId>
        <inlineHelpText>Visible to admins only. Populated only on a named/small set of records in sandboxes to help relationally-reconstruct specific data in partial copy environments (This fields helps admins combat the random sampling nature of partial copy environments)</inlineHelpText>
        <label>external id for n4jSFDC sandbox use only</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>fferpcore__SalesTaxStatus__c</fullName>
        <description>The tax status for this product for SUT companies.</description>
        <inlineHelpText>The tax status for this product for SUT companies.</inlineHelpText>
        <label>Sales Tax Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Taxable</fullName>
                </value>
                <value>
                    <fullName>Exempt</fullName>
                </value>
                <value>
                    <fullName>Exempt for Qualifying Accounts</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>fferpcore__TaxCode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The tax code to be used when calculating tax in a VAT or GST company.</description>
        <inlineHelpText>The tax code to be used when calculating tax in a VAT or GST company.</inlineHelpText>
        <label>Output VAT/GST Code</label>
        <referenceTo>fferpcore__TaxCode__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Forecast_Curve__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Forecast Curve</label>
        <referenceTo>pse__Forecast_Curve__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__IsServicesProduct__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsServicesProduct</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>Active_Products</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Products</label>
    </listViews>
    <listViews>
        <fullName>AllProducts</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>Product_Id__c</columns>
        <columns>Product_Group_Traction__c</columns>
        <columns>Subscription_Product__c</columns>
        <columns>Professional_Services__c</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <columns>PRODUCT2.CREATED_DATE</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.SKU</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
    </listViews>
    <listViews>
        <fullName>Eligible_for_SAO_Credit_Products</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>EligibleForSAOCredit__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>EligibleForSAOCredit__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Eligible for SAO Credit Products</label>
        <sharedTo>
            <group>All_Active_SFDC_Users</group>
        </sharedTo>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>